# todo-app-backend

./: .dockerignore  .env.dev  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile.toml  README.md  Taskfile.yaml  Taskfile.yml  compose-ci.yaml  docker-compose.sub.yml  docker-compose.test.yml  docker-compose.yaml  docker-compose.yml  flake.nix  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: on-push.yml
db/: Dockerfile  docker-compose.yml  init.sql
db/migrations/: 20230207054547_init.sql
src/: config.rs  lib.rs  main.rs  model.rs  route.rs  router.rs
src/model/: delete.rs  fetch.rs  insert.rs  update.rs
src/router/: delete.rs  get.rs  patch.rs  post.rs  put.rs
tests/: model.rs
