[package]
name = "todo-app-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
tokio = { version = "1.23", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.6", features = ["mysql", "runtime-tokio-native-tls", "chrono"] }
futures = "0.3"
axum = "0.6"
hyper = { version = "0.14", features = ["full"] }
tower = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
