[package]
name = "todo-app-backend"
version = "0.1.0"
edition = "2021"
publish = false
rust-version = "1.67"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
tokio = { version = "1.34", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["mysql", "runtime-tokio-native-tls", "chrono", "migrate"] }
axum = "0.7"
hyper = { version = "1.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
